--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Esteb\\AppData\\Roaming\\NetBeans\\25\\tomcat80.properties
-j2ee.server.home=C:/xampp/tomcat
-j2ee.server.instance=tomcat80:home=C:\\xampp\\tomcat
+deploy.ant.properties.file=C:\\Users\\cami-\\AppData\\Roaming\\NetBeans\\25\\tomcat90.properties
+file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\cami-\\Documents\\proyectoActualizado\\Biblioteca-Web\\web\\WEB-INF\\lib\\mysql-connector-j-8.3.0.jar
+j2ee.server.home=C:/xampp/apache-tomcat-9.0.104
+j2ee.server.instance=tomcat90:home=C:\\xampp\\apache-tomcat-9.0.104
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\Esteb\\AppData\\Roaming\\NetBeans\\25\\build.properties
+user.properties.file=C:\\Users\\cami-\\AppData\\Roaming\\NetBeans\\25\\build.properties
