--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\Esteb\\OneDrive\\Documentos\\SQL_conector\\mysql-connector-j-8.3.0.jar
+file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\cami-\\Documents\\BibliotecaWeb\\web\\WEB-INF\\lib\\mysql-connector-j-8.3.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,8 +47,8 @@ javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=24
-javac.target=24
+javac.source=21
+javac.target=21
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
